# torgo

./: .gitignore  Pipfile  README.md  pyproject.toml  torgo  torgo.py
.github/workflows/: main.yml
torgo/: __init__.py  torgo.py
