[tool.poetry]
name = "torgo"
version = "0.1.0"
description = ""
authors = ["Sam Hart <hartsn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tinydb = "^3.15.2"
argparse = "^1.4.0"
pathlib = "^1.0.1"
configparser = "^5.0.0"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
